# Rust_on_Rails

./: .env  .gitignore  Cargo.toml  README.md  up.sql
src/: lib.rs  main.rs
src/controllers/: mod.rs  users_controller.rs
src/migrations/: 20231027100000_create_users.rs
src/models/: Cargo.toml  mod.rs  user.rs
src/storage/: Cargo.toml  local.rs  mod.rs
src/views/users/: index.html.tera
