[package]
name = "rust_on_rails"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
tera = "1.0" 

# Adicionar bibliotecas para ActiveStorage (exemplo: reqwest para uploads)

[dependencies.reqwest]
version = "0.11"
features = ["json", "blocking"]